--- a/BookingCare/ReactJS/src/translations/vi.json
+++ b/BookingCare/ReactJS/src/translations/vi.json
@@ -58,5 +58,39 @@
     "homepage": {
         "outstanding-doctor": "Bác sĩ nổi bật tuần qua",
         "more-info": "Xem thêm"
+    },
+    "manage-schedule": {
+        "title": "Quản lý kế hoạch khám bệnh của bác sĩ",
+        "choose-doctor": "Chọn bác sĩ",
+        "choose-date":"Chọn ngày",
+        "save": "Lưu thông tin"
+    },
+    "patient": {
+        "detail-doctor":{
+            "schedule":"Lịch Khám",
+            "no-schedule":"Bác sĩ  không có lịch hẹn trong thời gian này"
+        },
+        "extra-infor-doctor":{
+            "text-address":"Địa chỉ khám",
+            "price":"Giá khám: ",
+            "detail":"Xem chi tiết",
+            "payment":"Người bệnh có thể thanh toán chi phí bằng hình thức: ",
+            "hide-price":"Ẩn bảng giá"
+        }
+    },
+    "admin":{
+        "manage-doctor":{
+            "title":"Tạo thêm thông tin bác sĩ",
+            "select-doctor":"Chọn bác sĩ",
+            "intro":"Thông tin giới thiệu",
+            "add":"Tạo thông tin",
+            "save":"Lưu thông tin",
+            "price":"Giá khám bệnh",
+            "payment":"Phương thức thanh toán",
+            "province":"Tỉnh thành",
+            "nameClinic":"Tên phòng khám",
+            "addressClinic":"Địa chỉ phòng khám",
+            "note":"Ghi chú"
+        }
     }
 }
