--- a/BookingCare/ReactJS/src/translations/en.json
+++ b/BookingCare/ReactJS/src/translations/en.json
@@ -56,7 +56,8 @@
     },
     "homepage": {
         "outstanding-doctor": "Last Week's featured doctor",
-        "more-info": "More Info"
+        "more-info": "More Info",
+        "specialties-popular": "Popular Specialties"
     },
     "manage-schedule": {
         "title": "Doctor's medical examination schedule management",
@@ -75,9 +76,23 @@
             "detail":"View details",
             "payment":"Patients can pay the fees through various methods: ",
             "hide-price":"Hide the price list"
-        }
-    },
-    "admin":{
+        },
+        "booking-modal":{
+            "title":"Information on medical examination orders",
+            "fullName": "Full Name",
+            "phoneNumber" :"Phone Number",                                                                     
+            "email": "Email",                                                                       
+            "address": "Address",
+            "reason": "Medical Examination Reason",
+            "birthday" :"Birthday",
+            "genders": "Gender",
+            "btnConfirm": "Confirm",
+            "btnCancel": "Cancel",
+            "priceBooking": "Free Booking",
+            "price": "Price: "
+        }                                                   
+    },                                                                              
+    "admin":{                                                                                          
         "manage-doctor":{
             "title":"Add more information about the doctor",
             "select-doctor":"Select doctor",
@@ -89,7 +104,9 @@
             "province":"Province",
             "nameClinic":"Clinic's name",
             "addressClinic":"Clinic's address",
-            "note":"Note"
+            "note":"Note",
+            "specialty": "Specialty",
+            "select-clinic": "Select Clinic"
         }
     }
 }
